--- a/HTML/about.html
+++ b/HTML/about.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>About Us</title>
-        <link rel="stylesheet" href="./CSS/aboutStyles.css">
+        <link rel="stylesheet" href="../CSS/aboutStyles.css">
         <script src="script.js" defer></script>
         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
@@ -14,9 +14,9 @@
             <img src="../Images/image 1.png" class="logo-img" alt="Logo">
             <nav class="nav-links">
                 <a href="../index.html">Home</a>
-                <a href="../HTML/products.html">Products</a>
-                <a href="../HTML/testimonials.html">Testimonials</a>
-                <a href="../HTML/about.html">About Us</a>
+                <a href="./products.html">Products</a>
+                <a href="./testimonials.html">Testimonials</a>
+                <a href="./about.html">About Us</a>
             </nav>
             <div class="language-dropdown">
                 <button class="dropbtn">
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="container">
-                <a href="../HTML/register.html">
+                <a href="./register.html">
                     <button class="order-btn">Register</button>
                 </a>
             </div>
@@ -76,9 +76,9 @@
                     <p>CAteriNgz has a 5 Star Hotel Standard Kitchen with very complete and hygienic cooking facilities. This is a form of realization of CAteriNgz's commitment to provide the best for its Friends</p>
                 </div>
             </div>
-            <div class="order-now" >
-                <button class="order-button">Order Now</button>
-            </div>
+                <div class="order-now">
+                <a href="../index.html" class="order-btn">Order Now</a>
+                </div>
         </section>
 
         <!-- AOS Library -->
