--- a/HTML/testimonials.html
+++ b/HTML/testimonials.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testimonials</title>
-    <link rel="stylesheet" href="./CSS/testimonialsStyles.css">
+    <link rel="stylesheet" href="../CSS/testimonialsStyles.css">
     <script src="script.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -14,9 +14,9 @@
             
             <nav class="nav-links">
                 <a href="../index.html">Home</a>
-                <a href="../HTML/products.html">Products</a>
-                <a href="../HTML/testimonials.html">Testimonials</a>
-                <a href="../HTML/about.html">About Us</a>
+                <a href="./products.html">Products</a>
+                <a href="./testimonials.html">Testimonials</a>
+                <a href="./about.html">About Us</a>
             </nav>
         <div class="language-dropdown">
             <button class="dropbtn">
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div class="container">
-            <a href="../HTML/register.html">
+            <a href="./register.html">
                 <button class="order-btn">Register</button>
             </a>
         </div>
