--- a/HTML/products.html
+++ b/HTML/products.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Products</title>
-    <link rel="stylesheet" href="./CSS/productStyles.css">
+    <link rel="stylesheet" href="../CSS/productStyles.css">
     <script src="script.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -13,9 +13,9 @@
         <img src="../Images/image 1.png" class="logo-img" alt="Logo">
         <nav class="nav-links">
             <a href="../index.html">Home</a>
-            <a href="../HTML/products.html">Products</a>
-            <a href="../HTML/testimonials.html">Testimonials</a>
-            <a href="../HTML/about.html">About Us</a>
+            <a href="./products.html">Products</a>
+            <a href="./testimonials.html">Testimonials</a>
+            <a href="./about.html">About Us</a>
         </nav>
         <div class="language-dropdown">
             <button class="dropbtn">
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="container">
-            <a href="../HTML/register.html">
+            <a href="./register.html">
                 <button class="order-btn">Register</button>
             </a>
         </div>
