--- a/HTML/register.html
+++ b/HTML/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Page</title>
-    <link rel="stylesheet" href="./CSS/registerStyles.css">
+    <link rel="stylesheet" href="../CSS/registerStyles.css">
     <script src="script.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap" rel="stylesheet">
 </head>
